--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/compiler-cli": "^17.0.0-rc.1",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^16.11.35",
+    "angular-cli-ghpages": "^0.6.2",
     "copyfiles": "^2.4.1",
     "jasmine-core": "~4.6.0",
     "jasmine-marbles": "~0.9.2",
